# reranker-simple-benchmark

./: .gitignore  Makefile  README.md  pyproject.toml
archive/: README.md
archive/retriever-simple-benchmark/data/AutoRAG/: README.md
archive/retriever-simple-benchmark/utils/: evaluate.py
eval/: custom_mteb_tasks.py  evaluate_reranker.py  leaderboard_bm25.py  leaderboard_reranker.py  retrieve_stage1_bm25.py  wrappers.py
results/: README.md
results/AutoRAG/BAAI_bge-reranker-v2.5-gemma2-lightweight/: 20241230_224622.json
results/AutoRAG/upskyy_ko-reranker-8k/: 20241230_161419.json
retriever-simple-benchmark/: main.py
retriever-simple-benchmark/bm25/: retrieve_bm25_with_tokenize.py
retriever-simple-benchmark/data/: __init__.py
retriever-simple-benchmark/module/reranker/: __init__.py  base.py  flag_llm_lightweight_reranker.py  flag_llm_reranker.py  flag_reranker.py  huggingface_reranker.py  mxbai_reranker.py
retriever-simple-benchmark/utils/: data.py  evaluate.py
v1/: pyproject.toml  requirements.txt
v1/results/: README.md
v1/results/AutoRAG/Dongjin-kr_ko-reranker/: 20241230_161936.json
v1/results/AutoRAG/Qwen3_Qwen3_Reranker_0.6B/: 20250609_135149.json
v1/results/AutoRAG/sigridjineth_ko-reranker-v1_2/: 20241230_160628.json
v1/retriever-simple-benchmark/: main.py
v1/retriever-simple-benchmark/module/reranker/: __init__.py  flag_reranker.py  http_reranker.py  huggingface_reranker.py
v2/: requirements.txt
v2/eval/: evaluate_reranker.py  evaluate_reranker_new.py  wrappers.py
v2/eval/.ipynb_checkpoints/: evaluate_reranker-checkpoint.py
(+171 files in other folders)
