[project]
name = "retriever-simple-benchmark"
version = "0.1.0"
description = "https://instruct.kr"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.0",
    "flagembedding>=1.2.11",
    "mxbai-rerank>=0.1.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "pyarrow>=18.1.0",
    "scikit-learn>=1.6.0",
    "torch>=2.5.1",
    "transformers==4.49.0",
    "typer>=0.15.1",
]
